--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3.8'
 
 services:
-  # Flask API Application
+  # Flask API Application with WebSocket
   api:
     build: .
-    container_name: intelligent_analysis_api
+    container_name: analysis_api_v2
     ports:
       - "5000:5000"
     environment:
@@ -13,7 +13,7 @@ services:
       - OPENSEARCH_HOST=opensearch
       - QDRANT_HOST=qdrant
       - MINIO_ENDPOINT=minio:9000
-      - API_KEY=${API_KEY:-SECURE_AND_COMPLEX_API_KEY_100M_MVP}
+      - SECRET_KEY=${SECRET_KEY:-super-secret-key-change-in-production}
     volumes:
       - ./models:/app/models
       - upload_data:/mnt/user-data/uploads
@@ -26,11 +26,52 @@ services:
     networks:
       - app_network
     restart: unless-stopped
+    command: python app_enhanced.py
 
-  # Redis Cache
+  # Celery Worker for Background Tasks
+  celery_worker:
+    build: .
+    container_name: analysis_celery_worker
+    environment:
+      - FLASK_ENV=production
+      - REDIS_HOST=redis
+      - OPENSEARCH_HOST=opensearch
+      - QDRANT_HOST=qdrant
+      - MINIO_ENDPOINT=minio:9000
+      - SECRET_KEY=${SECRET_KEY:-super-secret-key-change-in-production}
+    volumes:
+      - ./models:/app/models
+      - upload_data:/mnt/user-data/uploads
+      - output_data:/mnt/user-data/outputs
+    depends_on:
+      - redis
+      - opensearch
+    networks:
+      - app_network
+    restart: unless-stopped
+    command: celery -A celery_worker.celery_app worker --loglevel=info --concurrency=2
+
+  # Flower - Celery Monitoring
+  flower:
+    build: .
+    container_name: analysis_flower
+    ports:
+      - "5555:5555"
+    environment:
+      - CELERY_BROKER_URL=redis://redis:6379/1
+      - CELERY_RESULT_BACKEND=redis://redis:6379/2
+    depends_on:
+      - redis
+      - celery_worker
+    networks:
+      - app_network
+    restart: unless-stopped
+    command: celery -A celery_worker.celery_app flower --port=5555
+
+  # Redis - Cache + Message Broker
   redis:
     image: redis:7-alpine
-    container_name: intelligent_analysis_redis
+    container_name: analysis_redis_v2
     ports:
       - "6379:6379"
     volumes:
@@ -38,15 +79,17 @@ services:
     networks:
       - app_network
     restart: unless-stopped
+    command: redis-server --appendonly yes
 
-  # OpenSearch
+  # OpenSearch - Full-text Search
   opensearch:
     image: opensearchproject/opensearch:2.11.0
-    container_name: intelligent_analysis_opensearch
+    container_name: analysis_opensearch_v2
     environment:
       - discovery.type=single-node
       - plugins.security.disabled=true
       - "OPENSEARCH_JAVA_OPTS=-Xms512m -Xmx512m"
+      - bootstrap.memory_lock=true
     ports:
       - "9200:9200"
       - "9600:9600"
@@ -55,11 +98,18 @@ services:
     networks:
       - app_network
     restart: unless-stopped
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+      nofile:
+        soft: 65536
+        hard: 65536
 
-  # Qdrant Vector Database
+  # Qdrant - Vector Database for Images
   qdrant:
     image: qdrant/qdrant:v1.7.0
-    container_name: intelligent_analysis_qdrant
+    container_name: analysis_qdrant_v2
     ports:
       - "6333:6333"
       - "6334:6334"
@@ -69,10 +119,10 @@ services:
       - app_network
     restart: unless-stopped
 
-  # MinIO Object Storage
+  # MinIO - Object Storage
   minio:
     image: minio/minio:latest
-    container_name: intelligent_analysis_minio
+    container_name: analysis_minio_v2
     ports:
       - "9000:9000"
       - "9001:9001"
@@ -86,11 +136,50 @@ services:
       - app_network
     restart: unless-stopped
 
+  # Prometheus - Metrics Collection
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: analysis_prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+      - prometheus_data:/prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--storage.tsdb.retention.time=30d'
+    networks:
+      - app_network
+    restart: unless-stopped
+
+  # Grafana - Metrics Visualization
+  grafana:
+    image: grafana/grafana:latest
+    container_name: analysis_grafana
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=admin123
+      - GF_USERS_ALLOW_SIGN_UP=false
+    volumes:
+      - grafana_data:/var/lib/grafana
+      - ./grafana/dashboards:/etc/grafana/provisioning/dashboards
+      - ./grafana/datasources:/etc/grafana/provisioning/datasources
+    depends_on:
+      - prometheus
+    networks:
+      - app_network
+    restart: unless-stopped
+
 volumes:
   redis_data:
   opensearch_data:
   qdrant_data:
   minio_data:
+  prometheus_data:
+  grafana_data:
   upload_data:
   output_data:
 
