--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,31 @@
 # Flask and Core Dependencies
 Flask==3.0.0
 Flask-CORS==4.0.0
-Flask-SocketIO==5.3.5
 Werkzeug==3.0.1
 gunicorn==21.2.0
 
-# Authentication
+# NEW: JWT Authentication
 PyJWT==2.8.0
-Werkzeug==3.0.1  # for password hashing
 
-# Celery for Task Queue
-celery==5.3.4
-kombu==5.3.4
-flower==2.0.1
+# NEW: WebSocket Support
+flask-socketio==5.3.5
+python-socketio==5.10.0
+eventlet==0.33.3
+
+# NEW: Celery Task Queue
+celery[redis]==5.3.4
+flower==2.0.1  # Celery monitoring
+
+# NEW: Rate Limiting
+Flask-Limiter==3.5.0
+
+# NEW: Prometheus Monitoring
+prometheus-client==0.19.0
+prometheus-flask-exporter==0.22.4
+
+# NEW: API Documentation
+flask-swagger-ui==4.11.1
+flasgger==0.9.7.1
 
 # AI and ML Libraries
 torch==2.1.0
@@ -21,9 +34,9 @@ sentence-transformers==2.2.2
 onnxruntime==1.16.0
 llama-cpp-python==0.2.20
 
-# RAGAS for RAG Evaluation
-ragas==0.1.0
-datasets==2.15.0
+# NEW: RAGAS for RAG Evaluation
+# ragas==0.1.0  # Uncomment when needed
+numpy==1.24.3
 
 # Vector Databases and Search
 faiss-cpu==1.7.4
@@ -44,19 +57,7 @@ pytesseract==0.3.10
 redis==5.0.1
 minio==7.2.0
 
-# Monitoring
-prometheus-client==0.19.0
-prometheus-flask-exporter==0.23.0
-
-# API Documentation
-flasgger==0.9.7.1
-
-# WebSocket
-python-socketio==5.10.0
-eventlet==0.33.3
-
 # Utilities
-numpy==1.24.3
 pandas==2.1.4
 requests==2.31.0
 python-dotenv==1.0.0
@@ -65,8 +66,13 @@ pydantic==2.5.0
 # Development and Testing
 pytest==7.4.3
 pytest-cov==4.1.0
+pytest-asyncio==0.21.1
 black==23.12.0
 flake8==6.1.0
+
+# NEW: Async Support
+aiohttp==3.9.1
+asyncio==3.4.3
 
 # Optional: For production deployments
 # psycopg2-binary==2.9.9  # PostgreSQL support
